@@ -1,3 +1,7 @@
+2012-04-25  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* operation/agentes/exportdata.php: Fixed several bugs.
+
 2012-04-24 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* pandoradb_data.sql,
